Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 14.01.2022 08:36:12</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 14.01.2022 09:13:37</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,24 +7,24 @@
 <h5>Pátek, 14. 01. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Kmínová s vejcem</strong>
+<strong>Kari se zeleninou a kuřecím masem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Smažený květák s vařeným bramborem a tatarkou</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							129,-
-						</span>
-</p>
-<p>
-<strong>Kuřecí Čína s rýží</strong>
+<strong>Uzené kuřecí stehno se šťouchaným bramborem a se zelným salátkem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							135,-
+						</span>
+</p>
+<p>
+<strong>Šišky s mákem, cukrem a máslem</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							105,-
 						</span>
 </p>
 <p>
@@ -126,7 +126,7 @@ s cuketou, restovanou hlívou ústřičnou a omáčkou z portského vína
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z norskeho slede se sladkokyselym sezamovym dresinkem, ryzove nudle s cerstvymi bylinkami, zeleninou a klicky 139</li><li>Gravlax z divokeho lososa nerka se sladkokyselym sezamovym dresinkem, ryzove nudle s cerstvymi bylinkami, zeleninou a klicky 169</li><li>Malajsky hovezi rendang s kokosovym mlekem, vonavym korenim a tamarindem, jasminova ryze, salatek 139</li><li>Smazeny sekany teleci rizek s goudou, stouchane brambory se smazenou cibulkou, nase kysane zeli s mrkvi {L} 169</li><li>Arabsky cizrnovy hummus s olivovym olejem, sekane varene vajicko se zaatarem, arabske placky, salatek {L} 139</li></ol>
+<ol><li>Peceny jihocesky pstruh s krenovou jogurtovou omackou, pecene baby brambory, salatek 139</li><li>Peceny cerstvy morsky vlk a das s krenovou jogurtovou omackou, pecene baby brambory, salatek 175</li><li>Nam prik ong – thajske veprove s rajcaty, chilli, tamarindem a krevetovou pastou, thajska lepkava ryze, salatek 139</li><li>Danci burger s rajcaty, ledovym salatem, sriracha majonezou a goudou, pecene baby brambory, salatek {L} 169</li><li>Smazena pakora s kvetakem, cuketami, brokolici, paprikami a panc phoron, jogurtovy dip, salatek 139</li></ol>
 </td>
 </tr>
 </table>
