Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 14.01.2022 09:13:37</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 14.01.2022 09:44:03</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -52,7 +52,47 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Pátek 14.1.2022</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Linecký koláč s tvarohem a mákem</div>
+<div class="cena">55 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Linecký koláč s tvarohem, ostružinami a drobenkou</div>
+<div class="cena">55 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Tortilla wrap s kachním masem a salátem s čočkou</div>
+<div class="cena">69 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Kukuřičná polévka s chilli a pečenou paprikou - samostatně <em title="Mléko">7</em></div>
+<div class="cena">45 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Kukuřičná polévka s chilli a pečenou paprikou - v menu <em title="Mléko">7</em></div>
+<div class="cena">35 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>110g Filet ze pstruha pečený na bylinkovém másle, kartonové puré, pečené grenaillle, polníček <em title="Ryby">4</em><em title="Mléko">7</em></div>
+<div class="cena">159 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>300g Cottage pie, hovězí maso zapečené s bramborovou kaší, hrášek, římský salát <em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">149 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>300g Bramborové gnocchi, sýrová omáčka, baby špenát, pečená cherry rajčata, parmazán, vlašské ořechy <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em><em title="Skořápkové plody">8</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -126,7 +166,7 @@ s cuketou, restovanou hlívou ústřičnou a omáčkou z portského vína
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny jihocesky pstruh s krenovou jogurtovou omackou, pecene baby brambory, salatek 139</li><li>Peceny cerstvy morsky vlk a das s krenovou jogurtovou omackou, pecene baby brambory, salatek 175</li><li>Nam prik ong – thajske veprove s rajcaty, chilli, tamarindem a krevetovou pastou, thajska lepkava ryze, salatek 139</li><li>Danci burger s rajcaty, ledovym salatem, sriracha majonezou a goudou, pecene baby brambory, salatek {L} 169</li><li>Smazena pakora s kvetakem, cuketami, brokolici, paprikami a panc phoron, jogurtovy dip, salatek 139</li></ol>
+<ol><li>Peceny jihocesky pstruh s krenovou jogurtovou omackou, pecene baby brambory, salatek 139</li><li>Peceny cerstvy morsky vlk a das s krenovou jogurtovou omackou, pecene baby brambory, salatek 175</li><li>Nam prik ong – thajske veprove s rajcaty, chilli, tamarindem a krevetovou pastou, thajska lepkava ryze, salatek 139</li><li>Danci burger s rajcaty, ledovym salatem, sriracha majonezou a goudou, pecene baby brambory, salatek {L} 169</li><li>Smazena pakora s kvetakem, cuketami, brokolici, paprikami a panc phoron, korenena ryze, jogurtovy dip, salatek 139</li></ol>
 </td>
 </tr>
 </table>
