--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 14.01.2022 11:11:52</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 14.01.2022 11:41:07</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -78,7 +78,7 @@
 <div class="clear"></div>
 </li>
 <li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>110g Filet ze pstruha pečený na bylinkovém másle, kartonové puré, pečené grenaillle, polníček <em title="Ryby">4</em><em title="Mléko">7</em></div>
+<div class="polozka"><span class="poradi">1. </span>110g Filet ze pstruha pečený na bylinkovém másle, karotkové puré, pečené grenaillle, polníček <em title="Ryby">4</em><em title="Mléko">7</em></div>
 <div class="cena">159 Kč</div>
 <div class="clear"></div>
 </li>
