Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 17.01.2022 08:36:44</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 17.01.2022 09:14:07</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -13,7 +13,42 @@ None
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Pondělí 17.1.2022</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Vanilkovo-dýňový cheesecake s karamelem </div>
+<div class="cena">55 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Brownie</div>
+<div class="cena">55 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Bramborová polévka s hříbky- samostatně <em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">45 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Bramborová polévka s hříbky- v menu <em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">35 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>300g Tortilla wrap, trhané vepřové maso, bbq omáčka, mozzarella, fazole, míchaný salát <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Hořčice">10</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>150g Grilovaný kuřecí steak, olivová tapenáda, rajčatová salsa, kus kusns karotkou <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>300g Portobello na červeném víně, kořenová zelenina, šťouchané brambory, jarní cibulka <em title="Mléko">7</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -90,7 +125,7 @@ s cuketou, restovanou hlívou ústřičnou a omáčkou z portského vína
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny jihocesky pstruh s krenovou jogurtovou omackou, pecene baby brambory, salatek 139</li><li>Peceny cerstvy morsky vlk a das s krenovou jogurtovou omackou, pecene baby brambory, salatek 175</li><li>Nam prik ong – thajske veprove s rajcaty, chilli, tamarindem a krevetovou pastou, thajska lepkava ryze, salatek 139</li><li>Danci burger s rajcaty, ledovym salatem, sriracha majonezou a goudou, pecene baby brambory, salatek {L} 169</li><li>Smazena pakora s kvetakem, cuketami, brokolici, paprikami a panc phoron, korenena ryze, jogurtovy dip, salatek 139</li></ol>
+<ol><li>Peceny filet z atlanticke makrely s pecenym rajcetem a petrzelkovym pestem, cizrnovy salat se zeleninou a bylinkami  139</li><li>Peceny filet z cerstve prazmy s pecenym rajcetem a petrzelkovym pestem, cizrnovy salat se zeleninou a bylinkami 175</li><li>Boeuf bourguignon – hovezi na cervenem vine se zeleninou, zampiony a bouquet garni, jasminova ryze, salatek 139</li><li>Grilovane medailonky z panenske svickove s karamelizovanymi jablky, gratinovane brambory, salatek 169</li><li>Thajske kari s uzenym tofu, kvetakem, pak coj, kokosovym mlekem a arasidy, jasminova ryze 139</li></ol>
 </td>
 </tr>
 </table>
