--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 18.01.2022 08:36:33</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 18.01.2022 09:13:59</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -164,7 +164,7 @@ s cuketou, restovanou hlívou ústřičnou a omáčkou z portského vína
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlanticke makrely s pecenym rajcetem a petrzelkovym pestem, cizrnovy salat se zeleninou a bylinkami  139</li><li>Peceny filet z cerstve prazmy s pecenym rajcetem a petrzelkovym pestem, cizrnovy salat se zeleninou a bylinkami 175</li><li>Boeuf bourguignon – hovezi na cervenem vine se zeleninou, zampiony a bouquet garni, jasminova ryze, salatek 139</li><li>Grilovane medailonky z panenske svickove s karamelizovanymi jablky, gratinovane brambory, salatek 169</li><li>Thajske kari s uzenym tofu, kvetakem, pak coj, kokosovym mlekem a arasidy, jasminova ryze 139</li></ol>
+<ol><li>Thieboudienne – senegalska kulata ryze s rybimi filety {hejk, makrela, treska}, pecenou zeleninou a rajcaty, salatek 139</li><li>Peceny filet z cerstveho halibuta a prazmy s citronem a omackou aiolli, pecene brambory, salatek 139</li><li>Grilovany veprovy kebab suvlaki v recke citronove marinade ve chlebove placce, jogurtove tzatziki, recky cizrnovy salat se zeleninou a  cernymi olivami {L} 139</li><li>Italske houbove rizoto s bazantimi stehynky, lanyzovym olejem a parmezanem 169</li><li>Brokolicove birjany z basmati ryze se zeleninou, sazene vejce, jogurtove tzatziki, salatek 139</li><li></li></ol>
 </td>
 </tr>
 </table>
